force-app/main/default/objects/DML_Exception_Event__e/DML_Exception_Event__e.object-meta.xml
<CustomObject>
    <label>DML Exception Event</label>
    <pluralLabel>DML Exception Events</pluralLabel>
</CustomObject>