force-app/main/default/objects/DML_Exception_Event__e/fields/ErrorReceivedFrom__c.field-meta.xml
<CustomField>
    <fullName>ErrorReceivedFrom__c</fullName>
    <label>ErrorReceivedFrom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>