force-app/main/default/objects/DML_Exception_Event__e/fields/ErrorTriggeredController__c.field-meta.xml
<CustomField>
    <fullName>ErrorTriggeredController__c</fullName>
    <label>ErrorTriggeredController</label>
    <length>50</length>
    <type>Text</type>
</CustomField>