force-app/main/default/objects/DML_Exception_Event__e/fields/ErrorTriggeredMethod__c.field-meta.xml
<CustomField>
    <fullName>ErrorTriggeredMethod__c</fullName>
    <label>ErrorTriggeredMethod</label>
    <length>50</length>
    <type>Text</type>
</CustomField>