force-app/main/default/objects/DML_Exception_Event__e/fields/ExceptionType__c.field-meta.xml
<CustomField>
    <fullName>ExceptionType__c</fullName>
    <label>ExceptionType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>